# container_monitor

./: Cargo.toml
public/: index.js  sysinfo.js  websocket.js
src/: main.rs
src/containers/: mod.rs
src/middleware/: mod.rs
src/process/: mod.rs
templates/: index.html.hbs  login.html.hbs
